--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 12pt, oneside]{article}
+\documentclass[a4paper, 11pt, oneside]{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -13,13 +13,12 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 \usepackage{alltt}
-\usepackage{url}
 \usepackage{indentfirst}
 \usepackage{eurosym}
 \usepackage{listings}
 \usepackage{titlesec, blindtext, color}
 \usepackage[table,xcdraw,dvipsnames]{xcolor}
-\usepackage[unicode]{hyperref}
+%\usepackage[unicode]{hyperref}
 \usepackage{url}
 \usepackage{float}
 
@@ -29,7 +28,7 @@
 
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
 \newcommand{\ClassName}{INFO-0012: Computation Structures}
-\newcommand{\ProjectName}{Beta-machine }
+\newcommand{\ProjectName}{$\beta$-machine }
 \newcommand{\AcademicYear}{2020 - 2021}
 
 %%%% Page de garde %%%%
@@ -52,6 +51,46 @@
 %\tableofcontents
 %\newpage
 
-\section{Content}
+\subsection*{Control logic}
+\paragraph{}bla bla
+
+\subsection*{Instruction memory}
+\paragraph{}The instructions we implemented in order to test the instructions \texttt{ADDC}, \texttt{AND}, \texttt{CMPLEC}, \texttt{LD}, and \texttt{BNE}\footnote{Instructions associated to the lowest student id (20180521) of our group.}:
+\begin{table}[!ht]
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+\multicolumn{1}{|c|}{\textbf{Instruction}} & \multicolumn{1}{c|}{\textbf{Hexadecimal}} & \multicolumn{1}{c|}{\textbf{Effect}}  \\ \hline
+ADDC(R31, 5, R0)                           & C01F0005                                  & R0 is 5                               \\ \hline
+ADDC(R31, -5, R1)                          & C03FFFFB                                  & R1 is -5                              \\ \hline
+ADDC(R0, 5, R2)                            & C0400005                                  & R2 is 10                              \\ \hline
+ADDC(R1, -5, R28)                          & C0610005                                  & R3 is 0                               \\ \hline
+                                           &                                           &                                       \\ \hline
+ADDC(R31, 12, R0)                          & C01F000C                                  & R0 is 12                              \\ \hline
+ADDC(R31, 10, R1)                          & C03F000A                                  & R1 is 10                              \\ \hline
+AND(R0, R1, R2)                            & A0400800                                  & R2 is 8                               \\ \hline
+                                           &                                           &                                       \\ \hline
+ADDC(R31, 5, R0)                           & C01F0005                                  & R0 is 5                               \\ \hline
+ADDC(R31, -5, R1)                          & C03FFFFB                                  & R1 is -5                              \\ \hline
+CMPLEC(R0, 10, R30)                        & DBC0000A                                  & R30 is 1                              \\ \hline
+CMPLEC(R0, 5, R29)                         & DBA00005                                  & R29 is 1                              \\ \hline
+CMPLEC(R0, 2, R28)                         & DB800002                                  & R28 is 0                              \\ \hline
+CMPLEC(R1, -6, R30)                        & DBC1FFFA                                  & R30 is 0                              \\ \hline
+CMPLEC(R1, -5, R29)                        & DBA1FFFB                                  & R29 is 1                              \\ \hline
+CMPLEC(R1, -4, R28)                        & DB81FFFC                                  & R28 is 1                              \\ \hline
+                                           &                                           &                                       \\ \hline
+ADDC(R31, 0, R0)                           & C01F0000                                  & R0 is 0                               \\ \hline
+ADDC(R31, 21, R30)                         & C3DF0015                                  & R30 is 21                             \\ \hline
+ST(R30, 0, R0)                             & 67C00000                                  & Stores R30 at address contained in R0 \\ \hline
+LD(R0, 0, R1)                              & 60200000                                  & Loads content at address R0 in R1     \\ \hline
+ADDC(R31, 4, R0)                           & C01F0004                                  & R0 is 4                               \\ \hline
+ADDC(R31, 7, R2)                           & C05F0007                                  & R2 is 7                               \\ \hline
+ST(R2, 0, R0)                              & 64400000                                  & Stores R2 at address contained in R0  \\ \hline
+\end{tabular}
+\end{table}
+\paragraph{}The first 4 lines are testing the \texttt{ADD} instruction.\\
+The following 3 lines are testing the \texttt{AND} instruction. In the same instruction we are testing every possibility (1\&1, 1\&0, 0\&1, and 0\&0).\\
+The following 8 lines are testing the \texttt{CMPLEC} instruction. The first 2 \texttt{ADDC} are used to put desired values inside the register file.\\
+The following 7 lines are testing the \texttt{LD} instruction. We are using \texttt{R0} as a memory pointer. Then, we are storing 21 at address 0 in memory and loading the content at address 0 in \texttt{R1}. Finally, we are increasing \texttt{R0} by 4, storing 7 at address given by \texttt{R0}, and loading the content at the address given by \texttt{R0} in \texttt{R2}.
 
 \end{document}
