--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 11pt, oneside]{article}
+\documentclass[a4paper, 10pt, oneside]{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -61,31 +61,32 @@
 \begin{tabular}{|l|l|l|}
 \hline
 \multicolumn{1}{|c|}{\textbf{Instruction}} & \multicolumn{1}{c|}{\textbf{Hexadecimal}} & \multicolumn{1}{c|}{\textbf{Effect}}  \\ \hline
-ADDC(R31, 5, R0)                           & C01F0005                                  & R0 is 5                               \\ \hline
-ADDC(R31, -5, R1)                          & C03FFFFB                                  & R1 is -5                              \\ \hline
-ADDC(R0, 5, R2)                            & C0400005                                  & R2 is 10                              \\ \hline
-ADDC(R1, -5, R28)                          & C0610005                                  & R3 is 0                               \\ \hline
+ADDC(R31, 5, R0)                           & C01F0005                                  & R0$=$5                               \\ \hline
+ADDC(R31, -5, R1)                          & C03FFFFB                                  & R1$=$-5                              \\ \hline
+ADDC(R0, 5, R2)                            & C0400005                                  & R2$=$10                              \\ \hline
+ADDC(R1, 5, R3)                            & C0610005                                  & R3$=$0                              \\ \hline
+ADDC(R1, -5, R28)                          & C381FFFB                                  & R3$=$0                               \\ \hline
                                            &                                           &                                       \\ \hline
-ADDC(R31, 12, R0)                          & C01F000C                                  & R0 is 12                              \\ \hline
-ADDC(R31, 10, R1)                          & C03F000A                                  & R1 is 10                              \\ \hline
-AND(R0, R1, R2)                            & A0400800                                  & R2 is 8                               \\ \hline
+ADDC(R31, 12, R0)                          & C01F000C                                  & R0$=$12                              \\ \hline
+ADDC(R31, 10, R1)                          & C03F000A                                  & R1$=$10                              \\ \hline
+AND(R0, R1, R2)                            & A0400800                                  & R2$=$8                               \\ \hline
                                            &                                           &                                       \\ \hline
-ADDC(R31, 5, R0)                           & C01F0005                                  & R0 is 5                               \\ \hline
-ADDC(R31, -5, R1)                          & C03FFFFB                                  & R1 is -5                              \\ \hline
-CMPLEC(R0, 10, R30)                        & DBC0000A                                  & R30 is 1                              \\ \hline
-CMPLEC(R0, 5, R29)                         & DBA00005                                  & R29 is 1                              \\ \hline
-CMPLEC(R0, 2, R28)                         & DB800002                                  & R28 is 0                              \\ \hline
-CMPLEC(R1, -6, R30)                        & DBC1FFFA                                  & R30 is 0                              \\ \hline
-CMPLEC(R1, -5, R29)                        & DBA1FFFB                                  & R29 is 1                              \\ \hline
-CMPLEC(R1, -4, R28)                        & DB81FFFC                                  & R28 is 1                              \\ \hline
+ADDC(R31, 5, R0)                           & C01F0005                                  & R0$=$5                             \\ \hline
+ADDC(R31, -5, R1)                          & C03FFFFB                                  & R1$=$-5                              \\ \hline
+CMPLEC(R0, 10, R30)                        & DBC0000A                                  & R30$=$1                              \\ \hline
+CMPLEC(R0, 5, R29)                         & DBA00005                                  & R29$=$1                              \\ \hline
+CMPLEC(R0, 2, R28)                         & DB800002                                  & R28$=$0                              \\ \hline
+CMPLEC(R1, -6, R30)                        & DBC1FFFA                                  & R30$=$0                              \\ \hline
+CMPLEC(R1, -5, R29)                        & DBA1FFFB                                  & R29$=$1                              \\ \hline
+CMPLEC(R1, -4, R28)                        & DB81FFFC                                  & R28$=$1                              \\ \hline
                                            &                                           &                                       \\ \hline
-ADDC(R31, 0, R0)                           & C01F0000                                  & R0 is 0                               \\ \hline
-ADDC(R31, 21, R30)                         & C3DF0015                                  & R30 is 21                             \\ \hline
-ST(R30, 0, R0)                             & 67C00000                                  & Stores R30 at address contained in R0 \\ \hline
-LD(R0, 0, R1)                              & 60200000                                  & Loads content at address R0 in R1     \\ \hline
-ADDC(R31, 4, R0)                           & C01F0004                                  & R0 is 4                               \\ \hline
-ADDC(R31, 7, R2)                           & C05F0007                                  & R2 is 7                               \\ \hline
-ST(R2, 0, R0)                              & 64400000                                  & Stores R2 at address contained in R0  \\ \hline
+ADDC(R31, 0, R0)                           & C01F0000                                  & R0$=$0                               \\ \hline
+ADDC(R31, 21, R30)                         & C3DF0015                                  & R30$=$21                             \\ \hline
+ST(R30, 0, R0)                             & 67C00000                                  & MEM[Reg[R0]]$\leftarrow$Reg[R30]\\ \hline
+LD(R0, 0, R1)                              & 60200000                                  & Reg[R1]$\leftarrow$Mem[Reg[R0]]\\ \hline
+ADDC(R31, 4, R0)                           & C01F0004                                  & R0$=$4                               \\ \hline
+ADDC(R31, 7, R2)                           & C05F0007                                  & R2$=$7                               \\ \hline
+ST(R2, 0, R0)                              & 64400000                                  & MEM[Reg[R0]]$\leftarrow$Reg[R2]\\ \hline
 \end{tabular}
 \end{table}
 \paragraph{}The first 4 lines are testing the \texttt{ADD} instruction.\\
