review pull request

--- a/report.tex
+++ b/report.tex
@@ -71,7 +71,7 @@ ST                                         & 011001           & 0001            
 \makebox[\linewidth]{
 \begin{tabular}{|l|l|l|l|l|l|}
 \hline
-\multicolumn{1}{|c|}{\textbf{Instruction}} & \multicolumn{1}{c|}{\textbf{Hexadecimal}} & \multicolumn{1}{c|}{\textbf{Effect}} & \multicolumn{1}{c|}{Instruction} & \multicolumn{1}{c|}{Hexadecimal} & \multicolumn{1}{c|}{Effect}                                                             \\ \hline
+\multicolumn{1}{|c|}{\textbf{Instruction}} & \multicolumn{1}{c|}{\textbf{Hexadecimal}} & \multicolumn{1}{c|}{\textbf{Effect}} & \multicolumn{1}{c|}{\textbf{Instruction}} & \multicolumn{1}{c|}{\textbf{Hexadecimal}} & \multicolumn{1}{c|}{\textbf{Effect}}                                                             \\ \hline
 ADDC(R31, 5, R0)                           & C01F0005                                  & R0$=$5                               & CMPLEC(R1, -5, R29)              & DBA1FFFB                         & R29$=$1                                                                                 \\ \hline
 ADDC(R31, -5, R1)                          & C03FFFFB                                  & R1$=-$5                              & CMPLEC(R1, -4, R28)              & DB81FFFC                         & R28$=$1                                                                                 \\ \hline
 ADDC(R0, 5, R2)                            & C0400005                                  & R2$=$10                              & ADDC(R31, 0, R0)                 & C01F0000                         & R0$=$0                                                                                  \\ \hline
